packages/engine/src/tests/snapshots/engine__tests__tooltip__broken_good_then_broken_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      0,
      13
    ],
    "items": 6
  },
  {
    "range": [
      15,
      22
    ],
    "items": 4
  }
]
