packages/engine/src/tests/snapshots/engine__tests__tooltip__broken_math_call_underscore_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      43,
      49
    ],
    "items": 5
  }
]
