packages/engine/src/tests/snapshots/engine__tests__tooltip__broken_math_in_term_and_block_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      17,
      31
    ],
    "items": 2
  }
]
