packages/engine/src/tests/snapshots/engine__tests__tooltip__broken_mixed_errors_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      6,
      20
    ],
    "items": 2
  },
  {
    "range": [
      32,
      57
    ],
    "items": 4
  },
  {
    "range": [
      59,
      66
    ],
    "items": 4
  }
]
