packages/engine/src/tests/snapshots/engine__tests__tooltip__broken_recovered_page_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      0,
      18
    ],
    "items": 4
  },
  {
    "range": [
      20,
      44
    ],
    "items": 4
  }
]
