packages/engine/src/tests/snapshots/engine__tests__tooltip__broken_unclosed_after_heading_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      11,
      18
    ],
    "items": 4
  }
]
