packages/engine/src/tests/snapshots/engine__tests__tooltip__broken_unclosed_dollar_eof_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      14,
      21
    ],
    "items": 4
  }
]
