packages/engine/src/tests/snapshots/engine__tests__tooltip__broken_unclosed_dollar_mid_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      7,
      14
    ],
    "items": 4
  }
]
