packages/engine/src/tests/snapshots/engine__tests__tooltip__broken_unclosed_dollar_start_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 4
  }
]
