packages/engine/src/tests/snapshots/engine__tests__tooltip__broken_unclosed_paren_nested_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      9,
      18
    ],
    "items": 6
  }
]
